Updated the notebooks
Turns out I had ignored one of the US states, resulting in slightly wrong maps.

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4  The cargo plane carrying eight crew members an...  "
       ]
      },
-     "execution_count": 263,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "      dtype='object', length=12)"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "       'off the Philippine island of Elalat'], dtype=object)"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "       'West Virginia', 'Wisconsin', 'Wyoming'], dtype=object)"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,12 +593,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "state_names = [name.replace('[B]', '') for name in state_names]\n",
-    "state_names = [name.replace('Washington', 'Washington D.C.') for name in state_names]"
+    "state_names = [name.replace('[B]', '') for name in state_names]"
    ]
   },
   {
@@ -611,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1209,7 @@
        "662  Near Sumacal,  Beni                  BO  "
       ]
      },
-     "execution_count": 278,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1295,6 @@
     "    'Unied Kingdom': 'United Kingdom',\n",
     "    'WY': 'Wyoming',\n",
     "    'Washingon': 'Washington',\n",
-    "    'Washington D.C.': 'Washington',\n",
     "    'Wisconson': 'Wisconsin',\n",
     "    'Yugosalvia': 'Yugoslavia',\n",
     "    'Zimbabwe)': 'Zimbabwe',\n",
@@ -1337,7 +1335,6 @@
     "    'Ilha Grande Rio de Janeiro': 'Brazil',\n",
     "    'Islay Island': 'United Kingdom',\n",
     "    'Kirghizia': 'Kyrgyzstan',\n",
-    "    'Maine': 'United States of America',\n",
     "    'Manitoba': 'Canada',\n",
     "    'Manmar': 'Myanmar',\n",
     "    'Midway Island Naval Air Station': 'United States of America',\n",
@@ -1380,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1573,7 @@
        "4  Eleftheroupolis    Greece     None  "
       ]
      },
-     "execution_count": 283,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1614,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1692,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1749,7 @@
       "Chad\n",
       "Chile\n",
       "China\n",
-      "Columbia\n",
+      "Colombia\n",
       "Comoros Islands\n",
       "Congo\n",
       "Cook Islands\n",
@@ -1938,6 +1935,7 @@
       "Vietnam\n",
       "Wake Island\n",
       "Wales\n",
+      "Washington D.C.\n",
       "West Africa\n",
       "West Indies\n",
       "Western Africa\n",
@@ -1967,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1983,7 @@
        "'72 (passengers:68 crew:4)'"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2025,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2140,7 @@
        "      <td>0</td>\n",
        "      <td>2020</td>\n",
        "      <td>Medellín</td>\n",
-       "      <td>Columbia</td>\n",
+       "      <td>Colombia</td>\n",
        "      <td>None</td>\n",
        "      <td>8</td>\n",
        "      <td>6</td>\n",
@@ -2238,7 +2236,7 @@
        "\n",
        "              City   Country US_State Total_abroad Passengers_abroad  \\\n",
        "0          Pokhara     Nepal     None           72                68   \n",
-       "1         Medellín  Columbia     None            8                 6   \n",
+       "1         Medellín  Colombia     None            8                 6   \n",
        "2             Lima      Peru     None          108               102   \n",
        "3           Bukoba  Tanzania     None           43                39   \n",
        "4  Eleftheroupolis    Greece     None            8                 0   \n",
@@ -2251,7 +2249,7 @@
        "4           8                8                     0               8  "
       ]
      },
-     "execution_count": 292,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2271,7 +2269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2315,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2352,7 +2350,7 @@
        " 'Destination']"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2363,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2384,7 @@
       " 8   Decade                 4596 non-null   int64         \n",
       " 9   City                   4596 non-null   object        \n",
       " 10  Country                4596 non-null   object        \n",
-      " 11  US_State               927 non-null    object        \n",
+      " 11  US_State               959 non-null    object        \n",
       " 12  Total_abroad           4582 non-null   object        \n",
       " 13  Passengers_abroad      4582 non-null   object        \n",
       " 14  Crew_abroad            4582 non-null   object        \n",
@@ -2406,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2419,7 +2417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2442,7 +2440,7 @@
       " 8   Decade                 4596 non-null   int64         \n",
       " 9   City                   4596 non-null   object        \n",
       " 10  Country                4596 non-null   object        \n",
-      " 11  US_State               927 non-null    object        \n",
+      " 11  US_State               959 non-null    object        \n",
       " 12  Total_abroad           4582 non-null   Int16         \n",
       " 13  Passengers_abroad      4396 non-null   Int16         \n",
       " 14  Crew_abroad            4398 non-null   Int16         \n",
@@ -2470,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2481,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2493,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2503,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2563,7 +2561,7 @@
       "Chad\n",
       "Chile\n",
       "China\n",
-      "Columbia\n",
+      "Colombia\n",
       "Comoros Islands\n",
       "Congo\n",
       "Cook Islands\n",
@@ -2749,6 +2747,7 @@
       "Vietnam\n",
       "Wake Island\n",
       "Wales\n",
+      "Washington D.C.\n",
       "West Africa\n",
       "West Indies\n",
       "Western Africa\n",
@@ -2766,6 +2765,35 @@
     "temp.sort()\n",
     "for value in temp:\n",
     "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([None, 'California', 'Alaska', 'Ohio', 'Texas', 'Georgia',\n",
+       "       'Pennsylvania', 'Arizona', 'Mississippi', 'West Virginia',\n",
+       "       'Tennessee', 'Washington', 'Alabama', 'Iowa', 'Florida', 'Nevada',\n",
+       "       'Hawaii', 'Missouri', 'South Carolina', 'New York', 'Montana',\n",
+       "       'Louisiana', 'Colorado', 'Illinois', 'Maryland', 'Minnesota',\n",
+       "       'Massachusetts', 'Wisconsin', 'Kentucky', 'Vermont',\n",
+       "       'New Hampshire', 'Virginia', 'Wyoming', 'Connecticut',\n",
+       "       'New Mexico', 'Indiana', 'Kansas', 'New Jersey', 'North Carolina',\n",
+       "       'South Dakota', 'Arkansas', 'Michigan', 'Idaho', 'Utah', 'Oregon',\n",
+       "       'Rhode Island', 'Nebraska', 'Oklahoma', 'Delaware'], dtype=object)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['US_State'].unique()"
    ]
   }
  ],
